frontend/essGames/src/App.css
/* ... */
.detailed_description{
  display: flex;
  flex: 1 1 auto;
  
}

@media screen and (max-width: 1430px) {
  /* Your styles here */
  #description_select {
    width: 100%;
  }
}

.game_card_add{
  min-width: 150px;
  min-height: 205px;
  margin: 0;
}

.game_card{
  width: 150px;
  height: 205px;
  margin: 0;
}
.game_card>img{
  width: 150px;
  height: 205px;
}




body{
  overflow-x: hidden;
}
.grid_view {
  display: flex;
  flex-wrap: wrap; /* This is key to wrapping */
  gap: 1rem;
  gap: 0.5rem;        /* Adjust spacing between cards */
  padding: 1rem;
  justify-content: flex-start; /* Align cards to the left */
  row-gap: 3rem;
  column-gap: 1rem;
}
.grid_view {
  overflow-x: hidden;
  box-sizing: border-box;
  overflow-y: scroll;
  overflow-y: auto;
  
}

.game_card {
  width: 150px;
  max-width: 100%;
  flex-shrink: 0;
}

html, body {
  height: 100%;
}
.container {
  height: 100vh;
  overflow-y: hidden;
}
.list_item{
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0.2rem;
  cursor: pointer;
}
.list_item_icon{
  margin-bottom: 3px;
  margin-left: 0.5rem;
}


.list_item_count{
   justify-self: end;
   margin-left: auto;
   margin-right: 1rem;
  color: gray;
font-weight: 300;
  padding: 1px;
  border-radius: 4px;

}

.list_header{
  color: #747475;
  margin-top: 3rem;
  margin-bottom:0.5rem;
  font-weight: bold;
  margin-left: 10px;
  
}
.list_item{
  justify-content: start;
  color: rgb(143, 139, 139);
  background: inherit;
  border-radius: 4px;
  margin-left: 2px;
  padding: 0;
  font-weight: 400;
}
.list_item.selected{
  color: white;
}
.list_item.selected>.list_item_count{
  color: rgb(151, 150, 150);
}

.searchBar{
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.sidebar{
}

body * {
}
.grid_view{
}

.container{
  flex-direction: column;
}
#main-content{
  display: flex;
  flex-direction: row;
}

.game_card >img{
  border-radius: 6px;
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;
}
.game_card_footer{
  font-weight: 600;
  box-sizing: border-box;
  background: var(--backloggd-bg);
  background: #0C0C0C !important;
  margin-top: 0;
  padding: 0;
  margin: 0;
  gap: 0;
  outline: none;
  
}
.game_card_footer * {
}
.game_card{
}


.truncate *{
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.footer_title{
  max-width: 150px;
  color: rgb(185, 182, 182);
  
}

.grid_view{
  /* background: #0C0C0C !important; */
}
.game_card_container{
}
.game_card_footer{
  height: 50px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

#test4{
  line-height: 1;
  color: rgb(69, 69, 82);
}

.footer_star_icon * {
  align-self: start;
}

.footer_rating{
  display: flex;
  align-items: center;
  justify-content: left;
}
.grid_view{
  row-gap: 1rem;

}
.sort-bar_container{
  position: absolute;
}
.grid_view>.game_card_container, .grid_view>.game_card_add{
  margin-top: 4rem;
}

